# evrim-terraform

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: .terraform.tfstate.lock.info  main.tf  s3.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
